Setting up each section

--- a/index.html
+++ b/index.html
@@ -21,35 +21,42 @@
                 </ul>
             </div>
         </div>
-        <div class="grid-x">
-            <div class="cell ">
-                <h1 class="text-center">What up world</h1>
+        <div class="grid-x text-center">
+            <div class="cell">
+                <h1>What up world</h1>
+            </div>
+            <div class="cell">
+                <p>This is the beginning of something great!</p>
             </div>
         </div>
         <div class="grid-x">
             <div class="cell small-6 text-center">
-                <h2>half 1</h2>
+                <h2>Left Side</h2>
             </div>
             <div class="cell small-6 text-center">
-                <h2>half 2</h2>
+                <h2>Right Side</h2>
             </div>
         </div>
     </section>
-    <section class="middle-section">
+    <section class="middle-section" id="about">
         <div class="grid-x">
             <div class="cell text-center">
                 <h3>
                     The middle section goes here
                 </h3>
+                <p>All the coolest stuff is found in this section.</p>
             </div>
         </div>
     </section>
-    <section class="bottom-section">
+    <section class="bottom-section" id="portfolio">
         <div class="grid-x">
             <div class="cell text-center">
                 <h3>
                     This will be the bottom section
                 </h3>
+                <p>
+                    The end of the page will be after this section.
+                </p>
             </div>
         </div>
     </section>
