Formatting fixes. Added headshot

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Landing Page</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+        integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
-    <section class="container-fluid top-section">
+    <section class="container-fluid ">
         <div class="top-bar">
             <div class="top-bar-left">
                 <ul class="dropdown menu" data-dropdown-menu>
@@ -21,31 +23,36 @@
                 </ul>
             </div>
         </div>
-        <div class="grid-x text-center">
+        <div class="grid-x text-center grid-padding-x align-center-middle top-section">
             <div class="cell">
-                <h1>What up world</h1>
-            </div>
-            <div class="cell">
-                <p>This is the beginning of something great!</p>
-            </div>
-        </div>
-        <div class="grid-x">
-            <div class="cell small-6 text-center">
-                <h2>Left Side</h2>
-            </div>
-            <div class="cell small-6 text-center">
-                <h2>Right Side</h2>
+                <h1>Alex Reich</h1>
+                <p class="">
+                    <i class="fas fa-code"></i> Front End Developer |
+                    <i class="fas fa-basketball-ball"></i> Frequent Hooper |
+                    <i class="fas fa-fire"></i> Taco Connoisseur</p>
+                </p>
             </div>
         </div>
     </section>
-    <section class="middle-section" id="about">
-        <div class="grid-x">
-            <div class="cell text-center">
-                <h3>
-                    The middle section goes here
-                </h3>
-                <p>All the coolest stuff is found in this section.</p>
-            </div>
+    <section class="middle-section grid-x text-center" id="about">
+        <div class="cell  section-title">
+            <h3>About Me</h3>
+        </div>
+        <div class="cell">
+            <img src="./assets/IMG_9399.jpg" class="headshot">
+        </div>
+        <div class="cell  align-self-top">
+            <p class="">After teaching an Intro to JavaScript: Drawing and Animation course to the
+                children at the Boys and Girls
+                Club of Ada County, I discovered a passion for coding. This passion was then pursued and developed
+                through
+                Boise CodeWorks, where I obtained a more thorough understanding and proficient skill set.
+            </p>
+            <p class=""> By combining my creativitiy and outside-the-box problem solving skills gained
+                from years of experience as
+                a marketing copywriter with this newfound passion for development, I am confident I can be an
+                integral
+                part of any company looking to take the software development world to the next level. </p>
         </div>
     </section>
     <section class="bottom-section" id="portfolio">
