--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="grid-x text-center grid-padding-x align-center-middle top-section">
             <div class="cell">
-                <h1>Alex Reich</h1>
-                <p class="">
+                <h1 class="large">Alex Reich</h1>
+                <p>
                     <i class="fas fa-code"></i> Front End Developer |
                     <i class="fas fa-basketball-ball"></i> Frequent Hooper |
                     <i class="fas fa-fire"></i> Taco Connoisseur</p>
@@ -34,14 +34,14 @@
             </div>
         </div>
     </section>
-    <section class="middle-section grid-x text-center" id="about">
+    <section class="middle-section grid-x grid-padding-x text-center" id="about">
         <div class="cell  section-title">
             <h3>About Me</h3>
         </div>
         <div class="cell">
             <img src="./assets/IMG_9399.jpg" class="headshot">
         </div>
-        <div class="cell  align-self-top">
+        <div class="cell displayGrid">
             <p class="">After teaching an Intro to JavaScript: Drawing and Animation course to the
                 children at the Boys and Girls
                 Club of Ada County, I discovered a passion for coding. This passion was then pursued and developed
@@ -56,15 +56,49 @@
         </div>
     </section>
     <section class="bottom-section" id="portfolio">
-        <div class="grid-x">
-            <div class="cell text-center">
-                <h3>
-                    This will be the bottom section
-                </h3>
-                <p>
-                    The end of the page will be after this section.
-                </p>
+        <div class="grid-x text-center">
+            <div class="cell section-title">
+                <h3>Portfolio</h3>
             </div>
+            <!-- start -->
+            <div class="text-center">
+                <div class="">
+                    <div class="">
+                        <h4>Kanban</h4>
+                        <a href="https://kanban--vue.herokuapp.com/#/">
+                            <img class="thumbnail" src="./assets/KanBan.png" alt="">
+                        </a>
+
+                    </div>
+                    <div class="">
+                        <h4>Tooney Lunes</h4>
+                        <a href="https://alex-reich.github.io/Music-Is-Fun/">
+                            <img class="thumbnail" src="./assets/TuneyLoons.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class=" ">
+                    <div class="">
+                        <h4>Food Truck Tracker</h4>
+                        <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+                    </div>
+                    <div class="">
+                        <h4>Inspire</h4>
+                        <a href="https://alex-reich.github.io/inspire/">
+                            <img class="thumbnail" src="./assets/Inspire.png" alt="">
+                        </a>
+
+                    </div>
+                </div>
+                <div class="">
+                    <div>
+                        <p>Back to the top</p>
+                        <i class="fas fa-angle-up scroll-arrow"></i>
+                    </div>
+
+                </div>
+            </div>
+            <!-- end -->
         </div>
     </section>
 
