--- a/index.html
+++ b/index.html
@@ -56,50 +56,48 @@
         </div>
     </section>
     <section class="bottom-section" id="portfolio">
-        <div class="grid-x text-center">
+        <div class="grid-padding-x text-center">
             <div class="cell section-title">
                 <h3>Portfolio</h3>
             </div>
             <!-- start -->
-            <div class="text-center">
+            <div class="cell large-6">
                 <div class="">
-                    <div class="">
-                        <h4>Kanban</h4>
-                        <a href="https://kanban--vue.herokuapp.com/#/">
-                            <img class="thumbnail" src="./assets/KanBan.png" alt="">
-                        </a>
+                    <h4>Kanban</h4>
+                    <a href="https://kanban--vue.herokuapp.com/#/">
+                        <img class="thumbnail" src="./assets/KanBan.png" alt="">
+                    </a>
 
-                    </div>
-                    <div class="">
-                        <h4>Tooney Lunes</h4>
-                        <a href="https://alex-reich.github.io/Music-Is-Fun/">
-                            <img class="thumbnail" src="./assets/TuneyLoons.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class=" ">
-                    <div class="">
-                        <h4>Food Truck Tracker</h4>
-                        <img class="thumbnail" src="https://placehold.it/200x200" alt="">
-                    </div>
-                    <div class="">
-                        <h4>Inspire</h4>
-                        <a href="https://alex-reich.github.io/inspire/">
-                            <img class="thumbnail" src="./assets/Inspire.png" alt="">
-                        </a>
-
-                    </div>
                 </div>
                 <div class="">
-                    <div>
-                        <p>Back to the top</p>
-                        <i class="fas fa-angle-up scroll-arrow"></i>
-                    </div>
+                    <h4>Tooney Lunes</h4>
+                    <a href="https://alex-reich.github.io/Music-Is-Fun/">
+                        <img class="thumbnail" src="./assets/TuneyLoons.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="cell large-6">
+                <div class="cell-6">
+                    <h4>Food Truck Tracker</h4>
+                    <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+                </div>
+                <div class="cell-6">
+                    <h4>Inspire</h4>
+                    <a href="https://alex-reich.github.io/inspire/">
+                        <img class="thumbnail" src="./assets/Inspire.png" alt="">
+                    </a>
 
                 </div>
             </div>
-            <!-- end -->
         </div>
+        <div class="text-center">
+            <div>
+                <p>Back to the top</p>
+                <i class="fas fa-angle-up scroll-arrow"></i>
+            </div>
+
+        </div>
+        <!-- end -->
     </section>
 
     <script src="js/vendor/jquery.js"></script>
