Removed padding from portfolio, fixed layout.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </section>
     <section class="bottom-section" id="portfolio">
-        <div class="grid-padding-x text-center">
+        <div class="grid-x text-center">
             <div class="cell section-title">
                 <h3>Portfolio</h3>
             </div>
