Removed empty classes

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <img src="./assets/IMG_9399.jpg" class="headshot">
         </div>
         <div class="cell displayGrid">
-            <p class="">After teaching an Intro to JavaScript: Drawing and Animation course to the
+            <p>After teaching an Intro to JavaScript: Drawing and Animation course to the
                 children at the Boys and Girls
                 Club of Ada County, I discovered a passion for coding. This passion was then pursued and developed
                 through
                 Boise CodeWorks, where I obtained a more thorough understanding and proficient skill set.
             </p>
-            <p class=""> By combining my creativitiy and outside-the-box problem solving skills gained
+            <p> By combining my creativitiy and outside-the-box problem solving skills gained
                 from years of experience as
                 a marketing copywriter with this newfound passion for development, I am confident I can be an
                 integral
@@ -62,14 +62,14 @@
             </div>
             <!-- start -->
             <div class="cell large-6">
-                <div class="">
+                <div>
                     <h4>Kanban</h4>
                     <a href="https://kanban--vue.herokuapp.com/#/">
                         <img class="thumbnail" src="./assets/KanBan.png" alt="">
                     </a>
 
                 </div>
-                <div class="">
+                <div>
                     <h4>Tooney Lunes</h4>
                     <a href="https://alex-reich.github.io/Music-Is-Fun/">
                         <img class="thumbnail" src="./assets/TuneyLoons.png" alt="">
