--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="container-fluid ">
         <div class="top-bar">
             <div class="top-bar-left">
-                <ul class="dropdown menu" data-dropdown-menu>
+                <ul class="dropdown menu" data-smooth-scroll data-dropdown-menu>
                     <li class="menu-text">Alex Reich</li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -25,8 +25,8 @@
         </div>
         <div class="grid-x text-center grid-padding-x align-center-middle top-section">
             <div class="cell">
-                <h1 class="large">Alex Reich</h1>
-                <p>
+                <h1 class="mainHeading">Alex Reich</h1>
+                <p class="mainBullets">
                     <i class="fas fa-code"></i> Front End Developer |
                     <i class="fas fa-basketball-ball"></i> Frequent Hooper |
                     <i class="fas fa-fire"></i> Taco Connoisseur</p>
